[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "racing_report"
version = "1.0.1"
authors = [
  { name="Andrey Baykov", email="baykov.andrey@gmail.com" },
]
description = "Report of Monaco 2018 Racing"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://git.foxminded.com.ua/foxstudent102533/report-of-monaco-2018-racing"