[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "monaco_report_of_racing"
version = "1.0.2"
authors = [
  { name="Andrey Baykov", email="baykov.andrey@gmail.com" },
]
description = "Report of Monaco 2018 Racing"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.hatch.build.sources]
"src/racing_report" = "racing_report"

[project.urls]
"Homepage" = "https://git.foxminded.com.ua/foxstudent102533/report-of-monaco-2018-racing"